# email-newsletter

./: .env  Cargo.toml  Dockerfile  README.md  configuration.yaml
.cargo/: config.toml
.github/workflows/: ci.yml
configuration/: base.yaml
migrations/: 20230306194241_create_subscriptions_table.sql
scripts/: init_db.sh
src/: configuration.rs  lib.rs  main.rs  startup.rs  telemetry.rs
src/domain/: subscriber_email.rs  subscriber_name.rs
src/routes/: subscriptions.rs
tests/: health_check.rs
