[package]
name = "email-newsletter"
version = "0.1.0"
edition = "2021"
authors = ["Mikko Leppänen <mleppan23@gmail.com>"]

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "email-newsletter"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
opt-level = 3
lto = true
incremental = true

[dependencies]
actix-web = "4"
cargo-audit = "0.17.4"
cargo-tarpaulin = "0.25.1"
serde = { version = "1.0.152", features = ["derive"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
config = "0.13.3"
uuid = { version = "1.3.0", features = ["v4"] }
chrono = { version = "0.4.23", features = ["clock"] }
tracing = { version = "0.1.37", features = ["log"] }
tracing-subscriber = { version = "0.3.16", features = ["registry", "env-filter"] }
tracing-bunyan-formatter = "0.3.6"
tracing-log = "0.1.3"
secrecy = { version = "0.8.0", features = ["serde"] }
tracing-actix-web = "0.7.2"

[dependencies.sqlx]
version = "0.6"
default-features = false
features = [
    "runtime-tokio-rustls",
    "macros",
    "postgres",
    "uuid",
    "chrono",
    "migrate",
    "offline"
]


[dev-dependencies]
once_cell = "1.17.1"
reqwest = "0.11.14"
rstest = "0.16.0"
